Bruk liten bokstav i mappenavn i mappestrukturen

--- a/workshop/oppgaver/1. Oppsett kafka og meldinger via cli.md
+++ b/workshop/oppgaver/1. Oppsett kafka og meldinger via cli.md
@@ -1,2 +1,2 @@
-Lenke til oppsett:
+Gjør oppgavene i denne tutorialen, oppsett vil bli brukt i senere oppgaver
 https://codingharbour.com/apache-kafka/how-to-get-started-with-apache-kafka-in-5-minutes/
